# aicv

./: CMakeLists.txt  LICENSE  README.md  cv.md  education.json  employment.json  publications.bib  publications.json  pymd.py  pyproject.toml
aicv/: __init__.py  main.py
aicv/backend/: emojis.py  html.py  markdown.py  moderncv.py  personal_info.py
aicv/core/: extensions.py  processor.py
aicv/renderers/: __init__.py  education.py  employment.py  publications.py
aicv/utils/: escape_latex.py  html_generator.py  latex_compiler.py  pdf_converter.py  text_processing.py
example/: cv.md  education.json  employment.json  personal.json  publications.json
tests/: CMakeLists.txt  example_rendered.html  generate_example_html.py  test_html_rendering.py
tests/fragments/: education_entry.html  header_personal_info.html  job_experience.html  publication_item.html  section_heading.html
